# ChangeLog for sys-process/procps
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/procps/ChangeLog,v 1.68 2012/11/04 06:38:35 vapier Exp $

  04 Nov 2012; Mike Frysinger <vapier@gentoo.org> procps-3.3.4.ebuild:
  Switch to tarball on Debian mirrors since the git one does not include
  generated files #440626 by Jeroen Roovers.

*procps-3.3.4 (29 Oct 2012)

  29 Oct 2012; Mike Frysinger <vapier@gentoo.org> +procps-3.3.4.ebuild:
  Version bump.

  29 Jul 2012; Christoph Junghans <ottxor@gentoo.org> procps-3.3.3.ebuild:
  added prefix keywords

*procps-3.3.3 (20 May 2012)

  20 May 2012; Mike Frysinger <vapier@gentoo.org>
  +files/procps-3.3.3-watch-8bit.patch, +procps-3.3.3.ebuild:
  Version bump.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> procps-3.3.2_p2-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> procps-3.2.8_p11.ebuild:
  ppc64 stable wrt #390003

*procps-3.3.2_p2-r1 (24 Jan 2012)

  24 Jan 2012; Mike Frysinger <vapier@gentoo.org> -procps-3.3.2_p2.ebuild,
  +procps-3.3.2_p2-r1.ebuild, +files/procps-3.3.2-ncurses.patch, metadata.xml:
  Add some ncurses configure cleanups #400555.

*procps-3.3.2_p2 (24 Jan 2012)

  24 Jan 2012; Mike Frysinger <vapier@gentoo.org> +procps-3.3.2_p2.ebuild,
  +files/procps-3.3.2-headers.patch, +files/procps-3.3.2-noproc.patch:
  Version bump #399377 by Samuli Suominen.

  04 Jan 2012; Brent Baude <ranger@gentoo.org> procps-3.2.8_p11.ebuild:
  Marking procps-3.2.8_p11 ppc for bug 390003

  08 Dec 2011; Mike Frysinger <vapier@gentoo.org> procps-3.2.8_p11.ebuild,
  +files/procps-3.2.8-time_t.patch:
  Fix ps segfault on x32 ABI.

  03 Dec 2011; Raúl Porcel <armin76@gentoo.org> procps-3.2.8_p11.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #390003

  13 Nov 2011; Markus Meier <maekke@gentoo.org> procps-3.2.8_p11.ebuild:
  arm stable, bug #390003
