@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/procps
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/procps/ChangeLog,v 1.68 2012/11/04 06:38:35 vapier Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-process/procps/ChangeLog,v 1.69 2013/03/05 15:14:18 jer Exp $
+
+  05 Mar 2013; Jeroen Roovers <jer@gentoo.org> procps-3.3.4.ebuild:
+  Stable for HPPA (bug #460394).
 
   04 Nov 2012; Mike Frysinger <vapier@gentoo.org> procps-3.3.4.ebuild:
   Switch to tarball on Debian mirrors since the git one does not include
